[package]
name = "speedy-fields"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# halo2curves = { path = "../../tmp/halo2curves"}
# ark-bn254 = { path = "../../tmp/algebra/curves/bn254" }
ark-bn254 = "0.4.0"
halo2curves = "0.6.0"
criterion = "0.3"
ark-std = "0.4.0"
ark-ff = "0.4.2"

[[bench]]
name = "mul"
harness = false
