[package]
name = "speedy-fields"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_halo2curves = { git = "https://github.com/sragss/halo2curves", package = "halo2curves"}
# fast_halo2curves = { path = "../../sragss/halo2curves", package = "halo2curves"}
halo2curves = "0.6.0"
ark-bn254 = "0.4.0"
criterion = "0.3"
ark-std = "0.4.0"
ark-ff = "0.4.2"
unroll = "0.1.5"
metal = "0.27.0"
objc = "0.2.7"

[[bench]]
name = "mul"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
